# sweep

./: BUILD.bazel  CHANGELOG.md  LICENSE  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  main.go
.github/workflows/: release.yml  workflow.yml
cmd/: BUILD.bazel  root.go  serve.go
cmd/web/: web.go
scripts/: release.sh
web/: BUILD.bazel  screen.go  web.go  ws.go
web/static/: index.html  main.js
