load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle : exclude build
# gazelle:prefix github.com/kruemelmann/sweep/
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "github.com/kruemelmann/sweep/",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "sweep",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)
