load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "root.go",
        "serve.go",
    ],
    importpath = "github.com/kruemelmann/sweep/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//web",
        "@com_github_spf13_cobra//:cobra",
    ],
)
