load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "web",
    srcs = [
        "web.go",
        "ws.go",
    ],
    embedsrcs = [
        "static/index.html",
        "static/main.js",
    ],
    importpath = "github.com/kruemelmann/sweep/web",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gorilla_mux//:mux",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_kbinani_screenshot//:screenshot",
    ],
)
